Fix a model warning in KisTimeBasedItemModel

There were two issues:

1) KisTimeBasedItemModel::columnCount() could return the value that
   has already changed in the image without calling to
   begin/endInsertColumns. That is not really welcome by Qt.

2) In KisTimeBasedItemModel::setImage() we reset the model (and therefore
   updated its columns list), but didn't update m_d->numFramesOverride,
   which caused double insertion of the columns in
   slotPlaybackRangeChanged() a bit later.

BUG:473485